<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/app_bar_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="250dp"
        android:layout_gravity="center"
        android:layout_height="250dp"
        android:padding="10dp"
        android:src="@drawable/network_error"/>
    <TextView
        android:layout_width="match_parent"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:layout_height="wrap_content"
        android:text="@string/network_error_msg"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:gravity="center"
        >
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:padding="10dp"
            android:background="@drawable/button_bg_transparent"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/retry"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:background="@drawable/button_bg_transparent"
            android:text="@string/retry"
            android:layout_marginLeft="20dp" />
    </LinearLayout>
</LinearLayout>