<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFCCBC"
    android:orientation="vertical"
    tools:context="com.project.lorvent.way2freshers.activities.HelpActivity">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/help"
                    android:textColor="#555"
                    android:textSize="22sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:text="Feature Request"
                    android:textColor="#fff"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/help_heading"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:text="What is this about"
                    android:textColor="#555"
                    android:textSize="18sp" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_screen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <com.weiwangcn.betterspinner.library.BetterSpinner
                        android:id="@+id/screen"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/select" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:text="Request your feature here!"
                    android:textColor="#555"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp">

                    <EditText
                        android:id="@+id/version"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"

                        android:theme="@style/MyEditTextTheme" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="15dip"
                        android:background="@color/md_btn_selected_dark"
                        android:text="@string/back"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dip"
                        android:background="@color/colorPrimary"
                        android:text="@string/submit"
                        android:textColor="#fff"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</FrameLayout>
