<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFCCBC"
    tools:context="com.project.lorvent.way2freshers.activities.HelpActivity">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_gravity="center"
        android:id="@+id/cv"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        card_view:cardBackgroundColor="#ffffff"
        card_view:cardElevation="1dp"
        card_view:cardUseCompatPadding="true"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textSize="22sp"
                    android:textColor="#555"
                    android:text="@string/help"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="UI Feedback"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="15sp"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/help_heading"
                    android:layout_marginLeft="10dp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:textColor="#555"
                    android:text="How would you rate overall user Experience ?"
                    />

             <!--   <android.support.v7.widget.AppCompatRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/rating"/>-->

                <RatingBar
                    android:id="@+id/rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:gravity="center"
                    android:textColor="#555"
                    android:text="Any specific feedback ? Mention below"
                    android:layout_marginLeft="10dp" />
                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_feedback"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/feedback"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:theme="@style/MyEditTextTheme"

                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dip"
                        android:text="@string/back"
                        android:background="@color/md_btn_selected_dark"
                        android:layout_marginBottom="10dp"
                        android:textColor="#000"
                        android:textSize="18sp" />
                    <Button
                        android:id="@+id/submit"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="15dip"
                        android:layout_marginLeft="20dp"
                        android:text="@string/submit"
                        android:background="@color/colorPrimary"
                        android:layout_marginBottom="10dp"
                        android:textColor="#fff"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>

</FrameLayout>
